--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,349 @@
+html {
+  box-sizing: border-box;
+}
+:before,
+:after {
+  box-sizing: inherit;
+}
+
 body {
-    font-family: 'Nunito Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+main {
+  margin: 0;
+}
+
+h1,
+h2 {
+  font-family: "Russo One", sans-serif;
+}
+
+.spacer {
+  min-height: 100px;
+  width: 100%;
+}
+
+/*--------------------HEADER--------------------------*/
+
+.header-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  min-height: 100px;
+  z-index: 100;
+  background-color: white;
+  box-shadow: 0 0 2px black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 170px;
+  max-height: 60px;
+  margin: 30px;
+}
+
+.logo-position {
+  position: relative;
+  display: inline;
+  padding: 5px;
+}
+
+.menu {
+  margin-right: 50px;
+}
+
+.menu p {
+  display: inline-block;
+}
+
+.fa-bars {
+  margin-left: 10px;
+}
+
+nav {
+  display: none;
+}
+
+#sub-menu {
+  display: none;
+}
+
+#sub-menu:checked ~ nav {
+  display: block;
+}
+
+nav {
+  position: absolute;
+  margin-top: 10px;
+  width: 150px;
+  flex-wrap: wrap;
+}
+
+ul li {
+  border: black solid 0.1px;
+}
+
+li {
+  list-style: none;
+  margin-left: -100px;
+  line-height: 3;
+  text-align: center;
+  background: #fff;
+  text-transform: uppercase;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+.fa-bars,
+.menu p {
+  font-size: 20px;
+}
+
+.dropdown ul li:hover {
+  background: #e57e20;
+  border: none;
+}
+
+li a:hover {
+  color: #fff;
+}
+
+/*--------------------HOMEPAGE--------------------------*/
+.section-one {
+  position: relative;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.image1,
+.image2,
+.image3,
+.image4 {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  background-position: bottom;
+}
+
+.image1 {
+  animation: image1 20s linear infinite;
+}
+
+.image2 {
+  animation: image2 20s linear infinite;
+}
+
+.image3 {
+  animation: image3 20s linear infinite;
+}
+
+.image4 {
+  animation: image4 20s linear infinite;
+}
+
+@keyframes image1 {
+  0% {
+    visibility: visible;
+  }
+  25% {
+    visibility: hidden;
+  }
+  50% {
+    visibility: hidden;
+  }
+  75% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+
+@keyframes image2 {
+  0% {
+    visibility: hidden;
+  }
+  25% {
+    visibility: hidden;
+  }
+  50% {
+    visibility: visible;
+  }
+  75% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@keyframes image3 {
+  0% {
+    visibility: hidden;
+  }
+  25% {
+    visibility: hidden;
+  }
+  50% {
+    visibility: hidden;
+  }
+  75% {
+    visibility: visible;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+
+@keyframes image4 {
+  0% {
+    visibility: hidden;
+  }
+  25% {
+    visibility: hidden;
+  }
+  50% {
+    visibility: hidden;
+  }
+  75% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+
+.box {
+  background: rgb(0, 0, 0);
+  background: rgb(0, 0, 0, 0.5);
+  display: inline-block;
+  position: absolute;
+  left: 10%;
+  bottom: 10%;
+}
+
+.box p {
+  padding: 10px 40px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 2vw;
+}
+
+.about-section {
+  position: relative;
+  height: 70vh;
+  width: 100%;
+}
+
+.about-section h1 {
+  text-align: center;
+  display: block;
+  background-color: #fff;
+  height: 30px;
+}
+
+.blue-background {
+  background-color: #1ba1e8;
+  max-height: 50vh;
+  margin: 0;
+  display: flex;
+}
+
+.about-text {
+    background-color: #fff;
+   
+
+}
+
+.about-text, .vr-boy {
+flex: 1;
+margin: 0 30px;
+}
+
+
+
+
+/*------------------HEADER (mobile)------------------*/
+@media screen and (max-width: 760px) {
+  header {
+    height: 90px;
+  }
+
+  .logo {
+    max-width: 100px;
+    height: fit-content;
+    margin: 20px;
+    padding: 0;
+  }
+
+  .menu {
+    margin-right: 30px;
+  }
+
+  nav {
+    position: absolute;
+    margin-top: 0;
+    width: 70px;
+    right: 0;
+  }
+
+  li {
+    line-height: 2;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding: 7px;
+  }
+
+  li a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .fa-bars,
+  .menu p {
+    font-size: 18px;
+  }
+}
+
+/*----------------HOMEPAGE (mobile)-----------------*/
+@media screen and (max-width: 760px) {
+  .spacer {
+    min-height: 10px;
+    width: 100%;
+  }
+  .section-one {
+    top: 50px;
+  }
+
+  img {
+    background-position: center;
+    height: 50vh;
+  }
+
+  .slider-container {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+  }
 }
