--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,11 @@ li a:hover {
 }
 
 /*--------------------HOMEPAGE--------------------------*/
+.spacer {
+  height: 10vh;
+  width: 100%;
+}
+
 .section-one {
   position: relative;
 }
@@ -286,7 +291,6 @@ img {
   display: flex;
   margin: 0 auto;
   padding: 50px 0;
-  height: 30em;
 }
 
 .about-text,
@@ -323,6 +327,8 @@ img {
 
 .event {
   margin: 10px;
+  box-shadow: 0 0 1em rgb(22, 22, 22);
+  background-color: #fff;
 }
 
 .event-img {
@@ -338,19 +344,20 @@ img {
   text-align: center;
   position: absolute;
   padding: 10px;
-  margin: 0;
+  margin: 10px;
   color: #000;
   background-color: #fff;
   font-size: var(--fs-XS);
   font-weight: bolder;
-  border: #000 solid 2px;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
 }
 
 .event-txt {
   display: flex;
   flex-direction: column;
   padding: 0 10px;
-  border: black solid 3px;
   background-color: #fff;
 }
 
@@ -362,7 +369,6 @@ img {
 
 .event-txt p {
   font-size: var(--fs-S);
-  background-color: #fff;
 }
 
 .explore-section {
@@ -380,14 +386,27 @@ img {
 .explore-text,
 .explore-image {
   flex: 1;
+  box-shadow: 0 0 1em rgb(22, 22, 22);
 }
 
 .explore-image img {
   height: 100%;
 }
 
+.explore-image h2 {
+  text-align: center;
+  display: inline-block;
+  position: absolute;
+  color: #000;
+  background-color: #fff;
+  padding: 10px 50px;
+  font-size: var(--fs-XL);
+  font-weight: bolder;
+  box-shadow: 0 0 1em rgb(22, 22, 22);
+}
+
 /*------------------HEADER (mobile/ipad)------------------*/
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 810px) {
   header {
     height: 90px;
   }
@@ -424,18 +443,20 @@ img {
 
   .fa-bars,
   .menu p {
-    font-size: var(--fs-L);
+    font-size: var(--fs-M);
   }
 }
 
 /*----------------HOMEPAGE (mobile/ipad)-----------------*/
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 810px) {
   .spacer {
     height: 100px;
     width: 100%;
   }
-  .section-one {
-    max-height: 40vh;
+
+  .slider-container {
+    height: 40vh;
+    background-position: bottom;
   }
 
   img {
@@ -443,98 +464,138 @@ img {
     object-fit: cover;
   }
 
-  .slider-container {
-    height: 50vh;
-    background-position: bottom;
-  }
-
-  .box {
-    left: 0;
-  }
-
   .box p {
-    padding: 10px 20px;
-    font-size: var(--fs-S);
+    padding: 5px 10px;
+    font-size: var(--fs-XS);
   }
 
   .about-section {
-    top: 0;
     margin-top: 0;
-    height: 90vh;
-  }
-
-  .about-section h1,
-  .event-section h1 {
-    font-size: var(--fs-L);
-    padding-top: 20px;
-    margin: 0;
-  }
-
-  .about-section h1 {
     background-color: #1ba1e8;
   }
 
-  .blue-background {
-    max-height: fit-content;
-    display: block;
-    padding: 10px;
-  }
-
-  .about-text,
-  .vr-boy {
+  .about-section h1,
+  .event-section h1,
+  .explore-section h1 {
+    font-size: var(--fs-M);
+    padding-top: 20px;
+    background-color: transparent;
     margin: 0;
-    height: 17em;
   }
 
-  .about-text p,
-  .event-txt h2 {
-    font-size: var(--fs-S);
+  .about-wrapper {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    padding: 0;
   }
 
   .about-text p {
+    font-size: var(--fs-S);
     padding: 15px;
     margin: 0;
   }
 
-  .event-section {
-    height: 50vh;
-    background-color: #e57e20;
+  .about-text,
+  .vr-boy {
+    flex: 1;
+    box-shadow: none;
   }
 
-  .event-section h1 {
-    background-color: transparent;
-    margin-top: 17vh;
-    padding-bottom: 10px;
+  .vr-boy {
+    padding-bottom: 20px;
+  }
+
+  .event-section {
+    background-color: #e57e20;
   }
 
   .event-container {
     background-color: #06455b;
     padding: 0;
-    margin: 0;
-  }
-
-  .event {
-    margin: 0;
     display: block;
   }
 
-  .event-img,
-  .event-txt {
-    height: 150px;
+  .event {
+    display: flex;
     margin: 0;
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  .event-img {
+    flex: 1;
   }
 
   .event-img img {
     height: 100%;
   }
 
+  .event-img p {
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    color: #000;
+    background-color: #fff;
+    font-size: var(--fs-XS);
+    font-weight: bolder;
+  }
+
   .event-txt {
+    padding: 0 10px;
+    border: none;
     background-color: transparent;
-    padding: 0 15px;
+    flex: 1;
+    box-shadow: none;
+  }
+
+  .event-txt h2 {
+    font-size: var(--fs-S);
+    text-align: left;
+    margin: 5px;
     color: #fff;
   }
 
   .event-txt p {
     font-size: var(--fs-XS);
+    background-color: transparent;
+    color: #fff;
+    padding-bottom: 10px;
+  }
+
+  .explore-section {
+    background-color: #1ba1e8;
+    height: 100vh;
+    padding-bottom: 20px;
+  }
+
+  .explore-container {
+    height: fit-content;
+    margin-bottom: 10px;
+    padding: 0;
+    width: 100%;
+    border: red solid 2px;
+  }
+
+  .explore-text {
+    padding: 10px;
+    box-shadow: none;
+    background-color: #fff;
+  }
+
+  .explore-text p {
+    font-size: var(--fs-XS);
+    padding: 0;
+  }
+
+  .explore-image {
+    padding: 0;
+    box-shadow: none;
+  }
+
+  .explore-image h2 {
+    color: #000;
+    padding: 10px 20px;
+    font-size: var(--fs-S);
   }
 }
